--- a/main_file.bib
+++ b/main_file.bib
@@ -12,18 +12,13 @@ url = "http://www.sciencedirect.com/science/article/pii/000437028090051X",
 author = "Robert M. Haralick and Gordon L. Elliott"
 }
 
-﻿﻿@Inbook{Gay2015,
-author="Gay, Steven
-and Hartert, Renaud
-and Schaus, Pierre",
-chapter="Time-Table Disjunctive Reasoning for the Cumulative Constraint",
-title="Integration of AI and OR Techniques in Constraint Programming: 12th International Conference, CPAIOR 2015, Barcelona, Spain, May 18-22, 2015, Proceedings",
-year="2015",
-publisher="Springer International Publishing",
-pages="157--172",
-isbn="978-3-319-18008-3",
-doi="10.1007/978-3-319-18008-3_11",
-url="http://dx.doi.org/10.1007/978-3-319-18008-3_11"
+@inproceedings{Gay2015,
+  title={Time-table disjunctive reasoning for the cumulative constraint},
+  author={Gay, Steven and Hartert, Renaud and Schaus, Pierre},
+  booktitle={International Conference on AI and OR Techniques in Constriant Programming for Combinatorial Optimization Problems},
+  pages={157--172},
+  year={2015},
+  organization={Springer International Publishing}
 }
 
 @inproceedings{RELopez,
@@ -130,12 +125,7 @@ note = "",
 issn = "0925-5273",
 doi = "http://dx.doi.org/10.1016/j.ijpe.2010.09.030",
 url = "http://www.sciencedirect.com/science/article/pii/S0925527310003683",
-author = "Christian Artigues and Pierre Lopez and Alain Haït",
-keywords = "Production scheduling",
-keywords = "Energy constraints",
-keywords = "Constraint propagation",
-keywords = "Energetic reasoning ",
-abstract = "This paper deals with production scheduling involving energy constraints, typically electrical energy. We start by an industrial case-study for which we propose a two-step integer/constraint programming method. From the industrial problem we derive a generic problem, the Energy Scheduling Problem (EnSP). We propose an extension of specific resource constraint propagation techniques to efficiently prune the search space for EnSP solving. We also present a branching scheme to solve the problem via tree search. Finally, computational results are provided. "
+author = "Christian Artigues and Pierre Lopez and Alain Haït"
 }
 
 @article{CAVT,
@@ -175,16 +165,14 @@ note = "",
 issn = "0166-218X",
 doi = "http://dx.doi.org/10.1016/0166-218X(83)90012-4",
 url = "http://www.sciencedirect.com/science/article/pii/0166218X83900124",
-author = "J. Blazewicz and J.K. Lenstra and A.H.G.Rinnooy Kan",
-abstract = "In deterministic sequencing and scheduling problems, jobs are to be processed on machines of limited capacity. We consider an extension of this class of problems, in which the jobs require the use of additional scarce resources during their execution. A classification scheme for resource constraints is proposed and the computational complexity of the extended problem class is investigated in terms of this classification. Models involving parallel machines, unit-time jobs and the maximum completion time criterion are studied in detail; other models are briefly discussed. "
+author = "J. Blazewicz and J.K. Lenstra and A.H.G.Rinnooy Kan"
 }
-
 
 @inproceedings{Nattaf_ROADEF16,
   TITLE = {{Inégalités valides pour les modèles à évènements des problèmes d'ordonnancement sous contraintes de ressource}},
   AUTHOR = {Nattaf, Margaux and Artigues, Christian and Kis, Tam{\'a}s and Lopez, Pierre},
   BOOKTITLE = {{ROADEF - 17{\`e}me congr{\`e}s annuel de la Soci{\'e}t{\'e} fran{\c c}aise de recherche op{\'e}rationnelle et d'aide {\`a} la d{\'e}cision}},
-  ADDRESS = {Compiègne, France},
+  ADDRESS = {Compi{\`e}gne, France},
   ORGANIZATION = {{Soci{\'e}t{\'e} fran{\c c}aise de recherche op{\'e}rationnelle et d'aide {\`a} la d{\'e}cision}},
   YEAR = {2016},
   MONTH = Feb
@@ -385,20 +373,15 @@ doi="10.1007/s10589-010-9343-5",
 url="http://dx.doi.org/10.1007/s10589-010-9343-5"
 }
 
-
-@Inbook{GHS,
-author="Gay, Steven
+@inproceedings{GHS,
+  title={Simple and Scalable Time-Table Filtering for the Cumulative Constraint},
+  author={Gay, Steven
 and Hartert, Renaud
-and Schaus, Pierre",
-chapter="Simple and Scalable Time-Table Filtering for the Cumulative Constraint",
-title="Principles and Practice of Constraint Programming: 21st International Conference, CP 2015, Cork, Ireland, August 31 -- September 4, 2015, Proceedings",
-year="2015",
-publisher="Springer International Publishing",
-address="Cham",
-pages="149--157",
-isbn="978-3-319-23219-5",
-doi="10.1007/978-3-319-23219-5_11",
-url="http://dx.doi.org/10.1007/978-3-319-23219-5_11"
+and Schaus, Pierre},
+  booktitle={Principles and Practice of Constraint Programming: 21st International Conference, CP 2015, Cork, Ireland, August 31 -- September 4, 2015, Proceedings},
+  pages={149--157},
+  year={2015},
+  organization={Springer International Publishing}
 }
 
 
@@ -411,34 +394,26 @@ url="http://dx.doi.org/10.1007/978-3-319-23219-5_11"
   publisher={Springer Berlin Heidelberg}
 }
 
-@Inbook{BC,
-author="Beldiceanu, Nicolas
-and Carlsson, Mats",
-chapter="A New Multi-resource cumulatives Constraint with Negative Heights",
-title="Principles and Practice of Constraint Programming - CP 2002: 8th International Conference, CP 2002 Ithaca, NY, USA, September 9--13, 2002 Proceedings",
-year="2002",
-publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
-pages="63--79",
-isbn="978-3-540-46135-7",
-doi="10.1007/3-540-46135-3_5",
-url="http://dx.doi.org/10.1007/3-540-46135-3_5"
+@inproceedings{BC,
+  title={A New Multi-resource cumulatives Constraint with Negative Heights},
+  author={Beldiceanu, Nicolas
+and Carlsson, Mats},
+  booktitle={Principles and Practice of Constraint Programming - CP 2002: 8th International Conference, CP 2002 Ithaca, NY, USA, September 9--13, 2002 Proceedings},
+  pages={63--79},
+  year={2002},
+  organization={Springer International Publishing}
 }
 
 
-@Inbook{LBC,
-author="Letort, Arnaud
+@inproceedings{LBC,
+  title={A Scalable Sweep Algorithm for the cumulative Constraint},
+  author={Letort, Arnaud
 and Beldiceanu, Nicolas
-and Carlsson, Mats",
-chapter="A Scalable Sweep Algorithm for the cumulative Constraint",
-title="Principles and Practice of Constraint Programming: 18th International Conference, CP 2012, Qu{\'e}bec City, QC, Canada, October 8-12, 2012. Proceedings",
-year="2012",
-publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
-pages="439--454",
-isbn="978-3-642-33558-7",
-doi="10.1007/978-3-642-33558-7_33",
-url="http://dx.doi.org/10.1007/978-3-642-33558-7_33"
+and Carlsson, Mats},
+  booktitle={Principles and Practice of Constraint Programming: 18th International Conference, CP 2012, Qu{\'e}bec City, QC, Canada, October 8-12, 2012. Proceedings},
+  pages={439--454},
+  year={2012},
+  organization={Springer International Publishing}
 }
 
 
@@ -456,18 +431,15 @@ volume = {25},
 year = {1991},
 }
 
-@Inbook{OQ,
-author="Ouellet, Pierre
-and Quimper, Claude-Guy",
-chapter="Time-Table Extended-Edge-Finding for the Cumulative Constraint",
-title="Principles and Practice of Constraint Programming: 19th International Conference, CP 2013, Uppsala, Sweden, September 16-20, 2013. Proceedings",
-year="2013",
-publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
-pages="562--577",
-isbn="978-3-642-40627-0",
-doi="10.1007/978-3-642-40627-0_42",
-url="http://dx.doi.org/10.1007/978-3-642-40627-0_42"
+
+@inproceedings{OQ,
+  title={Time-Table Extended-Edge-Finding for the Cumulative Constraint},
+  author={Ouellet, Pierre
+and Quimper, Claude-Guy},
+  booktitle={Principles and Practice of Constraint Programming: 19th International Conference, CP 2013, Uppsala, Sweden, September 16-20, 2013. Proceedings},
+  pages={562--577},
+  year={2013},
+  organization={Springer International Publishing}
 }
 
 @article{ExtEF,
@@ -499,37 +471,28 @@ year={1980},
 volume={C-29},
 number={8},
 pages={703-709},
-keywords={Deterministic scheduling;independent tasks;memory allocation;multiprocessor system;paged-virtual memory;Central Processing Unit;Control engineering;Multiprocessing systems;Nonlinear equations;Optimal scheduling;Processor scheduling;Scheduling algorithm;Stochastic processes;Stochastic systems;Stress;Deterministic scheduling;independent tasks;memory allocation;multiprocessor system;paged-virtual memory},
 doi={10.1109/TC.1980.1675652},
 ISSN={0018-9340},
 month={Aug},}
 
-
-@Inbook{V11,
-author="Vil{\'i}m, Petr",
-title="Timetable Edge Finding Filtering Algorithm for Discrete Cumulative Resources",
-bookTitle="Integration of AI and OR Techniques in Constraint Programming for Combinatorial Optimization Problems: 8th International Conference, CPAIOR 2011, Berlin, Germany, May 23-27, 2011. Proceedings",
-year="2011",
-publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
-pages="230--245",
-isbn="978-3-642-21311-3",
-doi="10.1007/978-3-642-21311-3_22",
-url="http://dx.doi.org/10.1007/978-3-642-21311-3_22"
+@inproceedings{V11,
+  title={Timetable Edge Finding Filtering Algorithm for Discrete Cumulative Resources},
+  author={Vil{\'i}m, Petr},
+  booktitle={Integration of AI and OR Techniques in Constraint Programming for Combinatorial Optimization Problems: 8th International Conference, CPAIOR 2011, Berlin, Germany, May 23-27, 2011. Proceedings",
+year="2011},
+  pages={230--245},
+  year={2011},
+  organization={Springer International Publishing}
 }
 
 
-@Inbook{V09,
-author="Vil{\'i}m, Petr",
-chapter="Max Energy Filtering Algorithm for Discrete Cumulative Resources",
-title="Integration of AI and OR Techniques in Constraint Programming for Combinatorial Optimization Problems: 6th International Conference, CPAIOR 2009 Pittsburgh, PA, USA, May 27-31, 2009 Proceedings",
+@inproceedings{V09,
+  title={Max Energy Filtering Algorithm for Discrete Cumulative Resources},
+  author={Vil{\'i}m, Petr},
+  booktitle={Integration of AI and OR Techniques in Constraint Programming for Combinatorial Optimization Problems: 6th International Conference, CPAIOR 2009 Pittsburgh, PA, USA, May 27-31, 2009 Proceedings},
 year="2009",
-publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
-pages="294--308",
-isbn="978-3-642-01929-6",
-doi="10.1007/978-3-642-01929-6_22",
-url="http://dx.doi.org/10.1007/978-3-642-01929-6_22"
+  pages={294--308},
+  organization={Springer International Publishing}
 }
 
 @Article{Kis,
@@ -680,33 +643,26 @@ keywords = "Work content",
 keywords = "Priority-rule method "
 }
 
-@Inbook{VilimEF,
-author="Vil{\'i}m, Petr",
-chapter="Edge Finding Filtering Algorithm for Discrete Cumulative Resources in {$O(kn{\,}\log{n})$}",
-title="Principles and Practice of Constraint Programming - CP 2009: 15th International Conference, CP 2009 Lisbon, Portugal, September 20-24, 2009 Proceedings",
+@inproceedings{VilimEF,
+  title={Edge Finding Filtering Algorithm for Discrete Cumulative Resources in {$O(kn{\,}\log{n})$}},
+  author={Vil{\'i}m, Petr},
+  booktitle={Principles and Practice of Constraint Programming - CP 2009: 15th International Conference, CP 2009 Lisbon, Portugal, September 20-24, 2009 Proceedings},
 year="2009",
-publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
-pages="802--816",
-isbn="978-3-642-04244-7",
-doi="10.1007/978-3-642-04244-7_62",
-url="http://dx.doi.org/10.1007/978-3-642-04244-7_62"
+  pages={802--816},
+  organization={Springer International Publishing}
 }
 
 
-@Inbook{DHP,
-author="Dorndorf, Ulrich
+@inproceedings{DHP,
+  title={A Survey of Interval Capacity Consistency Tests for Time- and Resource-Constrained Scheduling",
+title="Project Scheduling: Recent Models, Algorithms and Applications},
+  author={Dorndorf, Ulrich
 and Huy, To{\`a}n Phan
-and Pesch, Erwin",
-chapter="A Survey of Interval Capacity Consistency Tests for Time- and Resource-Constrained Scheduling",
-title="Project Scheduling: Recent Models, Algorithms and Applications",
+and Pesch, Erwin},
+  booktitle={Project Scheduling: Recent Models, Algorithms and Applications},
 year="1999",
-publisher="Springer US",
-address="Boston, MA",
-pages="213--238",
-isbn="978-1-4615-5533-9",
-doi="10.1007/978-1-4615-5533-9_10",
-url="http://dx.doi.org/10.1007/978-1-4615-5533-9_10"
+  pages={213--238},
+  organization={Springer US}
 }
 
 
