--- a/newcommand.tex
+++ b/newcommand.tex
@@ -1,5 +1,6 @@
 \mtcsettitle{parttoc}{}
-
+\newcommand{\clearemptydoublepage}{%
+   \newpage{\pagestyle{empty}\cleardoublepage}}
 \newcommand\RCPSP{RCPSP}
 \newcommand\CECSP{CECSP}
 \newcommand\CUSP{CuSP}
