--- a/part1/chap1.tex
+++ b/part1/chap1.tex
@@ -59,7 +59,7 @@
 
 
 \chapter{Ordonnancement, ressources cumulatives et énergie}
-
+\label{sec:chapter1}
 Dans ce chapitre, nous commençons par définir ce qu'est un problème
 d'ordonnancement et quelles sont les principales caractéristiques d'un
 tel problème. Ensuite, nous présenterons deux exemples de problèmes
