--- a/part2/CuSP/PPC.tex
+++ b/part2/CuSP/PPC.tex
@@ -1,5 +1,5 @@
 \section{La programmation par contraintes}
-
+\label{sec:PPC}
 Ce paragraphe s'intéresse à la présentation des concepts de base de la
 programmation par contraintes (PPC). La programmation par contraintes
 vise à résoudre des problèmes de satisfaction de contraintes (CSP)
