--- a/part3/CECSP/modele_CECSP.tex
+++ b/part3/CECSP/modele_CECSP.tex
@@ -1,7 +1,7 @@
 %!TeX root =../main_file.tex
 \section{Modèles de programmation linéaire mixte pour le
 \CECSP}
-
+\label{sec:modele_CECSP}
 Le \CECSP ~et le \RCPSP~étant deux problèmes relativement proches --
 utilisation d'une ou plusieurs ressources cumulatives, de fenêtres de
 temps -- la modélisation du \CECSP~à l'aide de la programmation
