--- a/part3/RCPSP/PLNE_RCPSP.tex
+++ b/part3/RCPSP/PLNE_RCPSP.tex
@@ -1,6 +1,6 @@
 \chapter{Programmation linéaire et ordonnancement
   de projet}
-
+\label{sec:PLNE_RCPSP}
 \input{part3/RCPSP/PL.tex}
 
 Le paragraphe suivant est dédié aux modèles de programmation linéaire
