--- a/annexe/JFPC.tex
+++ b/annexe/JFPC.tex
@@ -1,5 +1,5 @@
 \chapter{Annexe1 - Article JFPC}  
-\label{ann_JFPC}
+\label{ann:JFPC}
 Nous considérerons un problème d'ordonnancement cumulatif dans
 lequel les tâches ont une durée et un profil de consommation de
 ressource variable. Ce profil, qui peut varier en fonction du temps, est
