--- a/main_file.bib
+++ b/main_file.bib
@@ -188,6 +188,34 @@ author = "J. Blazewicz and J.K. Lenstra and A.H.G.Rinnooy Kan"
   MONTH = May
 }
 
+@phdthesis{these_Sophie,
+  TITLE = {{Hybrid Constraint Programming-Integer Linear Programming approaches for the Resource-Constrained Project Scheduling Problem}},
+  AUTHOR = {Demassey, Sophie},
+  URL = {https://tel.archives-ouvertes.fr/tel-00293564},
+  SCHOOL = {{Universit{\'e} d'Avignon}},
+  YEAR = {2003},
+  MONTH = Dec,
+  KEYWORDS = {integer linear programming ; cutting-planes ; constraint programming ; dynamic backtracking ; scheduling ; programmation lin{\'e}aire ; coupes ; relaxations ; programmation par contraintes ; backtracking dynamique ; ordonnancement ; RCPSP},
+  TYPE = {Theses},
+  PDF = {https://tel.archives-ouvertes.fr/tel-00293564/file/demassey03phd.pdf},
+  HAL_ID = {tel-00293564},
+  HAL_VERSION = {v1},
+}
+
+
+@article{heur_RCPSP,
+title = "Serial and parallel resource-constrained project scheduling methods revisited: Theory and computation",
+journal = "European Journal of Operational Research",
+volume = "90",
+number = "2",
+pages = "320 - 333",
+year = "1996",
+note = "",
+issn = "0377-2217",
+doi = "http://dx.doi.org/10.1016/0377-2217(95)00357-6",
+url = "http://www.sciencedirect.com/science/article/pii/0377221795003576",
+author = "Rainer Kolisch"
+}
 
 @inproceedings{Nattaf_JFPC,
   TITLE = {{Programmation linéaire mixte et programmation par contraintes pour un problème d'ordonnancement à contraintes énergétiques}},
