--- a/main_file.tex
+++ b/main_file.tex
@@ -83,7 +83,7 @@
 %
 \clearemptydoublepage%
 \bibliographystyle{alpha}
-\bibliography{main_file,JFPC}
+\bibliography{main_file,JFPC,IESM}
 
 \begin{bibunit}[alpha]
 \nocite{main_file}
