--- a/part2/CECSP/ER_filter.tex
+++ b/part2/CECSP/ER_filter.tex
@@ -966,7 +966,7 @@ de vérification, ainsi que les ajustements sur un nombre polynomial
 d'intervalles $[t_1,t_2[$.
 
 \subsection{Caractérisation des intervalles d'intérêt}
-
+\label{sec:intervalle_CECSP}
 Dans un premier temps, nous prouvons que nous pouvons seulement
 considérer un nombre polynomial d'intervalles pour détecter une
 incohérence. En effet, à cause de la nature continue du problème, on
