--- a/part3/RCPSP/modele_RCPSP.tex
+++ b/part3/RCPSP/modele_RCPSP.tex
@@ -88,7 +88,7 @@ et la date de début au plus tard $\LS$, $T$ moins la valeur du
 plus long chemin entre $i$ et $n+1$.
 
 Dans la suite, nous notons ${\cal A}$ l'ensemble des
-activités réelles du projet et par $V={\cal A} \cup \{0,n+1\}$
+activités réelles du projet et $V={\cal A} \cup \{0,n+1\}$
 l'ensemble des activités réelles et fictives du projet.
 
 Nous pouvons maintenant exhiber la formulation à temps discret
