--- a/part4/res_PL.tex
+++ b/part4/res_PL.tex
@@ -1,6 +1,26 @@
 \section{Performances de la Programmation Linéaire Mixte}
 
 \subsection{Modèles indexés par le temps}
+\begin{table}[!htb]
+  \begin{center}
+    \begin{tabular}{|c|cc|cccc|}
+      \hline
+      \multirow{2}{*}{\#tasks} & \multicolumn{2}{c|}{first sol.}& \multicolumn{4}{c|}{final sol.}\\ 
+      \cline{2-7} 
+              & time(s) & gap & time & gap &\%solved &  \%opt \\
+      \hline 
+      \rule[5pt]{0pt}{5pt}
+      $10 $& $0,04$ & $10^{75}$ & $0,04$ & $0$ & $100$ & $100$\\ [5pt]
+      $20 $& $0,37$ & $10^{75}$ & $0,44$ & $0$ & $100$ & $100$\\ [5pt]
+      $25 $& $1,6$ & $10^{75}$ & $1,6$ & $0$ & $100$ & $100$\\ [5pt]
+      $30 $& $1,6$ & $10^{75}$ & $1,7$ & $0$ & $100$ & $100$\\ [5pt]
+      $60 $& $46$ & $10^{75}$ & $47$ & $0$ & $100$ & $100$\\ 
+      \hline 
+    \end{tabular}
+  \end{center}
+  \caption{Résultats du PLNE indexé par le temps pour le \CECSP.}
+  \label{tab:TI_CECSP}
+\end{table}
 
 \subsection{Modèles à événements}
 
@@ -118,7 +138,7 @@ représentés.
   \end{tikzpicture}
   \caption{Création du graphe de l'algorithme de séparation pour les
       inégalités de non préemption}
-    \label{fig:sep_algo}
+    \label{fig:algo_sep}
   \end{figure}
 \end{ex}
 
